--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@modelcontextprotocol/sdk": "^1.25.1",
     "express": "^4.18.2",
     "jsforce": "^1.11.1",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "zod": "^3.22.4"
   }
 }
